# polymorphic_allocator_testing

./: CMakeLists.txt  README.md
src/: library.h
tests/: test_allocator_propagation.cpp
